bugfix: modify section height to ensure no content overflow when reducing the window height

--- a/config/website/static/courses.css
+++ b/config/website/static/courses.css
@@ -171,7 +171,8 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     opacity: 1;
 }
 
