--- a/config/website/static/cpa.css
+++ b/config/website/static/cpa.css
@@ -42,7 +42,8 @@ span.dots {
 }
 
 header, section {
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
